--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/mac-and-cheese.html">Homemade Mac and Cheese</a>
+    <a href="./recipes/banana-pudding.html">Banana Pudding</a>
 </body>
 </html>
