--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Odin Recipes</h1>
     <a href="./recipes/mac-and-cheese.html">Homemade Mac and Cheese</a>
     <a href="./recipes/banana-pudding.html">Banana Pudding</a>
+    <a href="./recipes/juicy-peach-crisp.html">Juicy Peach Crisp</a>
 </body>
 </html>
