--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li>
-            <a href="./recipes/mac-and-cheese.html">Homemade Mac and Cheese</a>
-        </li>
-        <li>
-            <a href="./recipes/banana-pudding.html">Banana Pudding</a>
-        </li>
-        <li>
-            <a href="./recipes/juicy-peach-crisp.html">Juicy Peach Crisp</a>
-        </li>
-    </ul>
+    <h1 class="main-heading">Odin Recipes</h1>
+
+    <div>
+        <ul>
+            <li>
+                <a href="./recipes/mac-and-cheese.html">Homemade Mac and Cheese</a>
+            </li>
+            <li>
+                <a href="./recipes/banana-pudding.html">Banana Pudding</a>
+            </li>
+            <li>
+                <a href="./recipes/juicy-peach-crisp.html">Juicy Peach Crisp</a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
