--- a/recipes/mac-and-cheese.html
+++ b/recipes/mac-and-cheese.html
@@ -4,39 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homemade Mac and Cheesee Recipe</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Homemade Mac and Cheese</h1>
+    <h1 class="main-heading">Homemade Mac and Cheese</h1>
     <img src="../imgs/mac-and-cheese.jpg" alt="Homemade Mac and Cheese">
 
-    <h2>Description</h2>
-    <p>
-        This mac and cheese recipe with a buttered bread crumb topping is creamy and comforting. It's easy to make the cheese sauce from scratch on your stovetop, starting with a roux and adding milk, Cheddar, and Parmesan, resulting in a rich, decadent sauce that coats every nook and cranny of the noodles.
-    </p>
+    <div>
+        <h2>Description</h2>
+        <p>
+            This mac and cheese recipe with a buttered bread crumb topping is creamy and comforting. It's easy to make the cheese sauce from scratch on your stovetop, starting with a roux and adding milk, Cheddar, and Parmesan, resulting in a rich, decadent sauce that coats every nook and cranny of the noodles.
+        </p>
+    </div>
 
-    <h2>Ingredients</h2>
-    <ul>
-        <li>Macaroni</li>
-        <li>Butter and Flour</li>
-        <li>Milk</li>
-        <li>Cheese</li>
-        <li>Seasonings</li>
-        <li>Bread Crumps</li>
-    </ul>
+    <div>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Macaroni</li>
+            <li>Butter and Flour</li>
+            <li>Milk</li>
+            <li>Cheese</li>
+            <li>Seasonings</li>
+            <li>Bread Crumps</li>
+        </ul>
+    </div>
 
-    <h2>Steps</h2>
-    <ol>
-        <li>Preheat the oven to 350 degrees F (175 degrees C). Grease an 8-inch square baking dish.</li>
+    <div>
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat the oven to 350 degrees F (175 degrees C). Grease an 8-inch square baking dish.</li>
 
-        <li>Make the macaroni and cheese: Bring a large pot of lightly salted water to a boil. Add macaroni and simmer, stirring occasionally, until tender yet firm to the bite, about 8 minutes; it will finish cooking in the oven. Drain and transfer to the prepared baking dish.</li>
+            <li>Make the macaroni and cheese: Bring a large pot of lightly salted water to a boil. Add macaroni and simmer, stirring occasionally, until tender yet firm to the bite, about 8 minutes; it will finish cooking in the oven. Drain and transfer to the prepared baking dish.</li>
 
-        <li>While the macaroni is cooking, melt 1/4 cup butter in a medium skillet over low heat. Whisk in flour and stir until the mixture becomes paste-like and light golden brown, 3 to 5 minutes.</li>
+            <li>While the macaroni is cooking, melt 1/4 cup butter in a medium skillet over low heat. Whisk in flour and stir until the mixture becomes paste-like and light golden brown, 3 to 5 minutes.</li>
 
-        <li>Gradually whisk 2 1/2 cups milk into the flour mixture, and bring to a simmer. Stir in shredded Cheddar and finely grated Parmesan cheeses; season with salt and pepper. Cook and stir over low heat until cheese is melted and sauce has thickened, 3 to 5 minutes, adding up to 1/2 cup more milk if needed. Pour cheese sauce over macaroni and stir until well combined.</li>
+            <li>Gradually whisk 2 1/2 cups milk into the flour mixture, and bring to a simmer. Stir in shredded Cheddar and finely grated Parmesan cheeses; season with salt and pepper. Cook and stir over low heat until cheese is melted and sauce has thickened, 3 to 5 minutes, adding up to 1/2 cup more milk if needed. Pour cheese sauce over macaroni and stir until well combined.</li>
 
-        <li>Make the bread crumb topping: Melt 2 tablespoons butter in a skillet over medium heat. Add bread crumbs; cook and stir until well coated and browned. Spread bread crumbs over macaroni and cheese, then sprinkle with paprika.</li>
-        
-        <li>Bake in the preheated oven until topping is golden brown and macaroni and cheese is bubbling, about 30 minutes.</li>
-    </ol>
+            <li>Make the bread crumb topping: Melt 2 tablespoons butter in a skillet over medium heat. Add bread crumbs; cook and stir until well coated and browned. Spread bread crumbs over macaroni and cheese, then sprinkle with paprika.</li>
+            
+            <li>Bake in the preheated oven until topping is golden brown and macaroni and cheese is bubbling, about 30 minutes.</li>
+        </ol>
+    </div>
 </body>
 </html>
